testsuite/tests/parser/should_fail/pfail018.alan
hello() : proc
  foo : int;
{
  foo = 2
  foo = 3;
}
