testsuite/tests/parser/should_fail/pfail018.stderr
pfail018.alan:5:3: Error: Parse error on input `foo'
	Probably missing `;'

